hard coded link color

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -41,7 +41,7 @@ body {
 //-------------------------------
 
 a, .a {
-  color: var(--link-color);
+  color: #1C3A67; //var(--link-color);
   text-decoration: none;
   position: relative;
   border-bottom: 0.18rem solid transparent;
