Removes border-radius on logo

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -126,7 +126,7 @@
 // Photo in About page
 .me {
   width: 12rem;
-  border-radius: 100%;
+  //border-radius: 100%;
   position: relative;
 }
 @media (max-width: 50em) {
