--- a/_includes/main/head.html
+++ b/_includes/main/head.html
@@ -53,3 +53,6 @@
 {% if site.blog.inline_footnotes == true %}
 <link rel="stylesheet" href="{{ "assets/css/bf.css" | relative_url }}">
 {% endif %}
+
+<!-- Favicon -->
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
