--- a/_includes/main/head.html
+++ b/_includes/main/head.html
@@ -55,4 +55,4 @@
 {% endif %}
 
 <!-- Favicon -->
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="{{ 'favicon.ico' | prepend: site.url }}">
