Moves gear info to index

--- a/_includes/main/header.html
+++ b/_includes/main/header.html
@@ -10,7 +10,7 @@
             <li><a {% if page.title == 'About' %}class="selected"{% endif %} href="{{ '/' | prepend: site.baseurl }}">about</a></li>
             <li><a {% if page.title == 'People' %}class="selected"{% endif %} href="{{ '/people' | prepend: site.baseurl }}">people</a></li>
 	          <li><a {% if page.title == 'Research' %}class="selected"{% endif %} href="{{ '/research' | prepend: site.baseurl }}">research</a></li>
-            <li><a {% if page.title == 'Gear' %}class="selected"{% endif %} href="{{ '/gear' | prepend: site.baseurl }}">gear</a></li>
+            <!-- <li><a {% if page.title == 'Gear' %}class="selected"{% endif %} href="{{ '/gear' | prepend: site.baseurl }}">gear</a></li> -->
             <!-- <li><a href="{{ '/archive' | prepend: site.baseurl }}">archive</a></li> -->
         </ul>
     </div>
