--- a/_includes/main/footer.html
+++ b/_includes/main/footer.html
@@ -1,4 +1,4 @@
 <footer>
-    <span>{{ site.blog.description }}</span>
+    <!-- <span>{{ site.blog.description }}</span> -->
     <!--<span>written by {{ site.author.fullname }}</span>-->
 </footer>
