Removes bottom of footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,7 +39,7 @@
       </div>
     </div>
 
-    <div class="footer-bottom__grid">
+    <!-- <div class="footer-bottom__grid">
       <div class="copyright">
         <p>
           Copyright &copy;
@@ -49,6 +49,6 @@
       </div>
       <a class="privacy" href="/privacy-policy">Privacy Policy</a>
     </div>
-  </div>
+  </div> -->
 </footer>
 <button id="GoTop" title="Go to top" onclick="topFunction()" style="display: none;"><span> &raquo; </span></button>
