--- a/_includes/home/people.html
+++ b/_includes/home/people.html
@@ -1,4 +1,4 @@
-{%- assign positions_order = "Faculty,Postdoc,PhD,Masters,Undergrad,PhD Alumni,Masters Alumni,Undergrad Alumni" | split: ',' -%}
+{%- assign positions_order = "Faculty,Postdoc,PhD,Masters,Undergrad,Postdoc Alumni,PhD Alumni,Masters Alumni,Undergrad Alumni,Other Alumni" | split: ',' -%}
 
 <section class="people__section">
   <div class="container">
