--- a/_sass/project.scss
+++ b/_sass/project.scss
@@ -77,12 +77,13 @@
     margin: 100px 0 50px;
   }
   .people__grid{
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     gap: 30px;
-    row-gap: 30px;
-    justify-content: center;
     margin-top: 15px;
+    max-width: 1240px;
+    margin-left: auto;
+    margin-right: auto;
     }
 }
 
